# shimmer

./: .gitignore  CMakeLists.txt  shimmer.astylerc
fonts/xolonium/: FONTLOG.txt
src/: CMakeLists.txt  shim_macros.h
src/scripts/: shimmer.sh
src/sdl/: CMakeLists.txt  config.cpp  config.h  file_helpers.cpp  file_helpers.h  hw_surface.cpp  hw_surface.h  menu.hpp  opengl_helpers.cpp  opengl_helpers.h  regex_helpers.cpp  regex_helpers.h  sdl_shim.cpp  sdl_shim.h  sdltest.cpp  shader_manager.cpp  shader_manager.h  shimmer.cpp  shimmer.h  std_helpers.h  sw_scaler.cpp  sw_scaler.h  sw_surface.cpp  sw_surface.h  video_surface.h
src/sdl2/: CMakeLists.txt  scaled_window.cpp  shim.cpp
src/shaders/: default.frag  default.vert
src/shaders/common/: bilinear_filter.frag  debug.frag
src/shaders/common/fs/: colourspace.frag
src/shaders/fs/: default.frag  hsv.frag  hsv_adaptive_scaler.frag  hsv_prime.frag  scanlines.frag
src/shaders/functions/: colourspace.frag
src/shaders/surface/fs/: bilinear_clamp_scaler.frag  default.frag  hsv.frag  hsv_adaptive_scaler.frag  hsv_prime.frag  scanlines.frag  solid.frag  xbrz3x.frag  xbrz4x.frag  xbrz6x.frag
src/shaders/surface/vs/: default.vert
src/shaders/text/: text.frag  text.vert
src/shaders/vs/: default.vert
src/shimmer/: CMakeLists.txt  config.hpp  event_system.hpp  keyboard_system.cpp  keyboard_system.hpp  mouse_system.cpp  mouse_system.hpp  shimmer.cpp  shimmer.hpp  video_system.cpp  video_system.hpp  window_system.cpp  window_system.hpp
src/shimmer/api/: keyboard_api.cpp  keyboard_api.hpp  mouse_api.cpp  mouse_api.hpp  video_api.cpp  video_api.hpp  window_api.cpp  window_api.hpp
src/shimmer/catch/: CMakeLists.txt  freetype.cpp  menu_builder.cpp  mouse.cpp  scene_manager.cpp
src/shimmer/catch/video/common/: material.cpp  model.cpp  scene.cpp
src/shimmer/common/: config.cpp  config.hpp  enums.hpp  event.hpp  event_system.hpp  file_helpers.cpp  file_helpers.hpp  file_utils.cpp  file_utils.hpp  macros.hpp  menu.hpp  regex_helpers.cpp  regex_helpers.h  regex_helpers.hpp  types.hpp
src/shimmer/config/: config.cpp  config.hpp  menu.cpp  menu.hpp  menu_builder.cpp  menu_builder.hpp  menu_item.hpp
src/shimmer/font/: font_face.cpp  font_face.hpp  font_loader.cpp  font_loader.hpp  freetype.cpp  freetype.hpp
src/shimmer/input/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.h  mouse.hpp
src/shimmer/video/: material.hpp  mesh.hpp  object.hpp  opengl_renderer.cpp  opengl_renderer.hpp  renderer.cpp  renderer.hpp  scene.hpp  shader.hpp  texture.hpp  uniform.hpp  video.cpp  video.hpp  window.cpp  window.hpp
src/shimmer/video/common/: animation.hpp  fbo.hpp  font.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  resource_manager.hpp  sampler.hpp  scene.cpp  scene.hpp  scene_manager.hpp  shader.hpp  texture.cpp  texture.hpp  uniform.hpp
src/shimmer/video/opengl/: attribute.cpp  attribute.hpp  formats.cpp  formats.hpp  gl_material.cpp  gl_material.hpp  gl_material_manager.cpp  gl_material_manager.hpp  gl_program.cpp  gl_program.hpp  gl_renderer.hpp  gl_resource_manager.cpp  gl_resource_manager.hpp  gl_sampler.cpp  gl_sampler.hpp  gl_shader.cpp  gl_shader.hpp  gl_shader_manager.cpp  gl_shader_manager.hpp  gl_texture.cpp  gl_texture.hpp  gl_texture_manager.cpp  gl_texture_manager.hpp  gl_uniform.cpp  gl_uniform.hpp  glsl_variable.cpp  glsl_variable.hpp  model.hpp  opengl_helpers.cpp  opengl_helpers.hpp  quad.cpp  quad.hpp  render_object.cpp  render_object.hpp  shader.cpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  text_renderer.cpp  text_renderer.hpp  (+2 more)
src/shimmer/video/opengl/fonts/: gl_font.cpp  gl_font.hpp  gl_font_loader.hpp  gl_glypgh.hpp  gl_glyph.cpp  gl_glyph.hpp
src/shimmer/video/opengl/uniforms/: application_output.cpp  application_output.hpp  random_output.cpp  random_output.hpp  ticks_output.cpp  ticks_output.hpp  uniform_output.hpp
src/shims/: CMakeLists.txt  shim_macros.h
src/shims/sdl/: CMakeLists.txt  event.cpp  event.hpp  gl.cpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  shim.cpp  shim.hpp  video.cpp  video.hpp  window.cpp  window.hpp
src/shims/sdl2/: CMakeLists.txt  event.cpp  event.hpp  gl.hpp  keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  scaled_window.h  shim.cpp  shim.hpp  video.cpp  video.hpp
